# Laboratorio_Programmazione

./: CMakeLists.txt  README.md  main.cpp
Control/: InputHandler.cpp  InputHandler.h  TipoInput.cpp  TipoInput.h
Domain/: Attivita.h  AttivitaImportante.cpp  AttivitaImportante.h  AttivitaSemplice.cpp  AttivitaSemplice.h  ListaAttivita.cpp  ListaAttivita.h
Persistence/: GestoreFile.cpp  GestoreFile.h
test/: AttivitaSempliceTest.cpp  CMakeLists.txt  GestoreFileFixture.cpp  InputHandlerFixture.cpp  ListaAttivitaFixture.cpp  ListaAttivitaTest.cpp  TipoInputTest.cpp  runAllTests.cpp
